--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,26 @@
   --white-color: #fff;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: var(--main-bgc);
-  color: var(--text-main-color);
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  height: auto;
+  /* max-width: 100%; */
 }
 
 /* .list list-style: none;
@@ -26,6 +42,19 @@ body {
 
 a {
   text-decoration: none;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--main-bgc);
+  color: var(--text-main-color);
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 .visually-hidden {
@@ -39,10 +68,6 @@ a {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
-}
-
-ul {
-  list-style: none;
 }
 
 .section-title {
@@ -75,14 +100,24 @@ ul {
 /* -----Header-------- */
 
 .header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
   background: var(--main-bgc);
 }
 
 .logo {
+  margin-right: 94px;
+
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -97,6 +132,24 @@ ul {
 
 .logo .logo-white {
   color: var(--white-color);
+}
+
+.header-container {
+  display: flex;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav-item + .header-nav-item {
+  margin-left: 50px;
 }
 
 .header-nav-link {
@@ -116,6 +169,16 @@ ul {
   color: var(--accent-color);
 }
 
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.nav-contacts + .nav-contacts {
+  margin-left: 50px;
+}
+
 .header-link-contacts {
   color: var(--text-second-color);
 }
@@ -127,16 +190,26 @@ ul {
 
 /* --------Hero------ */
 .hero {
+  display: flex;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
+  align-items: center;
+
   background-color: var(--hero-footer-background-color);
 }
 
 .hero-title {
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
   color: var(--white-color);
 }
 
@@ -146,14 +219,16 @@ ul {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  
-  display: flex;
+
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
 
   background-color: var(--accent-color);
   color: var(--white-color);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .hero-button:hover,
@@ -166,7 +241,25 @@ ul {
 
 /* --------Features--------- */
 
+.features {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.features-list-item {
+  width: calc(100% / 4 - 30px);
+  margin-left: 30px;
+}
+
 .features-title {
+  margin-bottom: 10px;
+  margin-right: 30px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -174,36 +267,98 @@ ul {
   text-transform: uppercase;
 }
 
+/* --------Business-------- */
+
+.business {
+  padding-bottom: 94px;
+}
+
+.business-title {
+  margin-bottom: 50px;
+}
+
+.business-list {
+  display: flex;
+}
+
+.business-item + .business-item {
+  margin-left: 30px;
+}
+
 /* -------Team------ */
 
 .team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
   background-color: var(--seconr-bgc);
 }
 
+.team-title {
+  margin-bottom: 50px;
+}
+
+.team-subtitle {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.team-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.team-item {
+  width: calc(100% / 4 - 30px);
+  margin-left: 30px;
+}
+
 .team-position {
+  padding-bottom: 30px;
+  text-align: center;
+
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: #757575;
 }
 
+.team-img {
+  margin-bottom: 30px;
+}
+
 /* ------Footer------- */
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: var(--hero-footer-background-color);
+}
+
+.footer-logo {
+  margin-bottom: 20px;
 }
 .address {
   font-style: normal;
 }
 
+.address-list-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .direct-address {
+  margin-bottom: 9px;
+
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--white-color);
 }
 
-.footer-link-contacts {
+.footer-link-contacts:not(:last-child) {
+  display: flex;
+  margin-bottom: 9px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -217,9 +372,15 @@ ul {
 
 /* ------Filter------- */
 
+.filter-project {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .filters-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 34px;
 }
 
 .filters-list-item:not(:last-child) {
@@ -252,7 +413,55 @@ ul {
 
 /* ----Project------- */
 
+.project {
+  display: flex;
+}
+
+.project-list {
+  display: flex;
+  margin-left: -30px;
+  flex-wrap: wrap;
+}
+
+.project-list-item {
+  margin-left: 30px;
+  margin-bottom: 20px;
+
+  width: 370px;
+  height: 404px;
+  left: 215px;
+  top: 262px;
+
+  background: var(--white-color);
+
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #eeeeee;
+}
+
+.text-bellow {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+}
+
+.text-bellow-technopig {
+  padding-left: 33px;
+  padding-right: 15px;
+  padding-bottom: 30px;
+}
+
+.project-list-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.project-img {
+  margin-bottom: 20px;
+}
+
 .project-title {
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
